# models/user.go
@@ -6,3 +6,8 @@ type User struct {
 	Username string `json:"username"`
 	Password string `json:"password"`
 }
+
+// JWTトークンレスポンス用構造体
+type TokenResponse struct {
+	Token string `json:"token"`
+}
